# Twiiter_Ebac

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
base_static/global/css/: style.css
base_static/global/js/: scripts.js
base_templates/global/: base.html
base_templates/global/partials/: form.html  head.html
project/: asgi.py  base.py  production.py  settings.py  urls.py  views.py  wsgi.py
static/tweeter/css/: style.css
tweeter/: admin.py  apps.py  forms.py  models.py  urls.py  validators.py  views.py
tweeter/migrations/: 0001_initial.py  0002_alter_comment_autor.py
tweeter/templates/tweeter/pages/: home.html  tweet_edit.html
tweeter/templates/tweeter/partial/: comment.html  follower.html  navbar.html  paginator.html  right.html  tweet.html
tweeter/templatetags/: user_filters.py
tweeter/tests/: test_home_urls.py  test_home_view.py  test_tweet_base.py  test_tweet_model.py
users/: forms.py  models.py  urls.py  views.py
users/forms/: __init__.py  login_form.py  profile_form.py  register_form.py  tweet_form.py
users/migrations/: 0001_initial.py
users/templates/user/pages/: login.html  profile.html  register.html
users/templates/user/partial/: tweet.html
