[tool.poetry]
name = "tweeter"
version = "0.1.0"
description = "tweeter-clone"
authors = ["Filipe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.3"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
mysqlclient = "^2.2"
pillow = "^11.1.0"
gitpython = "^3.1.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
